Salesforce/main/default/objects/Regiao__c/fields/Grupo_de_R__c.field-meta.xml
<CustomField>
    <fullName>Grupo_de_R__c</fullName>
    <description>Grupo região</description>
    <inlineHelpText>Grupo região</inlineHelpText>
    <label>Grupo região</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>GO</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>MG</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>RO</fullName>
            </value>
            <value>
                <fullName>RR</fullName>
            </value>
            <value>
                <fullName>RS</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
            </value>
            <value>
                <fullName>TO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>