Salesforce/main/default/objects/Regiao__c/fields/Microrregi_o_de_Vendas__c.field-meta.xml
<CustomField>
    <fullName>Microrregi_o_de_Vendas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Microrregião de Vendas</label>
    <referenceTo>Microrregi_o_de_Vendas__c</referenceTo>
    <relationshipLabel>Região</relationshipLabel>
    <relationshipName>Regi_o</relationshipName>
    <type>Lookup</type>
</CustomField>